Fixed overflow issue editor form

--- a/plugins/rich-editor/src/scss/_richEditorForm.scss
+++ b/plugins/rich-editor/src/scss/_richEditorForm.scss
@@ -8,6 +8,7 @@
     position: relative;
     height: 100vh;
     padding-top: $global-gutter_halfSize;
+    overflow: hidden;
 }
 
 .richEditorForm-title {
